syntax = "proto3";
package pb;
option go_package = "pb";

//import "google/api/annotations.proto";
//import "protoc-gen-swagger/options/annotations.proto";
import "error.proto";
import "receiver.proto";
import "alertrule.proto";
import "resource.proto";
//import "google/protobuf/timestamp.proto";

// alert config
message AlertConfig {
    string alert_config_id = 1;
    string alert_config_name = 2;
    AlertRuleGroup alert_rule_group = 3;
    ResourceGroup resource_group = 4;
    ReceiverGroup receiver_group = 5;

    string severity_id = 6;
    string severity_ch = 7;

    //    enum UpdateType {
    //        RECEIVER = 0;
    //        ALERTRULE = 1;
    //        RESOURCE = 2;
    //        SEVERITY = 3;
    //        EFFECTIVETIME = 4;
    //        ENABLE = 5;
    //        DESC = 6;
    //    }
    //
    //    UpdateType update_type = 8;
    string enable_start = 8;
    string enable_end = 9;
//    google.protobuf.Timestamp enable_start = 8;
//    google.protobuf.Timestamp enable_end = 9;
    string desc = 10;
}

message AlertConfigSpec {
    string alert_config_id = 1;
}

message AlertConfigResponse {
    AlertConfig alert_config = 1;
    Error error = 2;
}

service AlertConfigHandler {
    // alert
    rpc CreateAlertConfig (AlertConfig) returns (AlertConfigResponse) {
    }

    rpc DeleteAlertConfig (AlertConfigSpec) returns (AlertConfigResponse) {
    }

    rpc UpdateAlertConfig (AlertConfig) returns (AlertConfigResponse) {
    }

    rpc GetAlertConfig (AlertConfigSpec) returns (AlertConfigResponse) {
    }
}